# HELOC

./: .gitignore  Index.ipynb  README.md  app.py  create_venv.py  environment.yml  heloc_streamlit_app.py  pyproject.toml  render.yaml  requirements.txt
.devcontainer/: devcontainer.json
heloc/: __init__.py
heloc/calculations/: __init__.py  amortization.py  monte_carlo.py  risk.py  scenarios.py
heloc/reports/: __init__.py  pdf_report.py
heloc/services/: __init__.py  ai_advisor.py  market_rates.py
heloc/ui/: __init__.py  inputs.py  layout.py
heloc/visualizations/: __init__.py  charts.py
tests/: test_amortization.py  test_market_rates.py  test_monte_carlo.py  test_pdf_report.py  test_risk.py  test_scenarios.py  test_ui_inputs.py
